--- a/css/main_page.css
+++ b/css/main_page.css
@@ -579,85 +579,6 @@ header .nav-link + .nav-link {
   cursor: pointer;
 }
 
-* {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-}
-
-body {
-  background-color: #ffffff;
-  margin: 0;
-}
-
-.container {
-  max-width: 1110px;
-  margin: 0 auto;
-}
-
-.flex-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.grid-container {
-  display: -ms-grid;
-  display: grid;
-}
-
-.action {
-  padding-top: 10px;
-}
-
-.action a {
-  margin: 8px;
-  text-decoration: none;
-  color: #ffffff;
-  font-size: 14;
-  font-weight: bold;
-  border: solid;
-  border-radius: 5px;
-  padding: 10px;
-  width: 150px;
-  text-align: center;
-}
-
-.action a:hover {
-  background-color: #32a8d6;
-}
-
-.heading {
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  height: 60px;
-  margin-top: 100px;
-}
-
-.title {
-  margin: 0;
-  height: 44px;
-  font-size: 44px;
-  text-transform: uppercase;
-}
-
-.title .color {
-  color: #32a8d6;
-}
-
-.block {
-  height: 5px;
-  width: 150px;
-  background-color: #32a8d6;
-}
-
 .blog {
   height: 700px;
 }
